--- a/templates/bot_downloader_av_receive_list.html
+++ b/templates/bot_downloader_av_receive_list.html
@@ -57,24 +57,6 @@ video {
   <div id='page2'></div>
 </div>
 
-<!-- 예고편 Player Modal: START -->
-<div class="modal fade" id="trailer_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="modal-title">예고편 재생: </h4>
-      </div>
-      <div class="modal-body" id="modal_body" style="word-break:break-all;">
-		<span id="trailer_player"></span>
-       </div>
-      <!--</div>-->
-      <div class="modal-footer">
-        <button type="button" id='trailer_close_btn' class="btn btn-default" data-dismiss="modal">닫기</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- 예고편 Player Modal: END -->
 
 <script type="text/javascript">
 var package_name = "{{arg['package_name'] }}";
@@ -120,54 +102,21 @@ $("body").on('click', '#json_btn', function(e){
   }
 });
 
-/*
-$("body").on('click', '#trailer_view_btn', function(e){
-  e.preventDefault();
-  var code = $(this).data('code');
-  
-  $.ajax({
-    url: '/'+package_name+'/ajax/' + sub + '/get_extra_content_url',
-    cache: false,
-    type: "POST",
-    data: {ctype:'trailer', code:code},
-    success: function (data) {
-        if (data.ret = 'success') {
-          $("#trailer_modal").modal();
-          document.getElementById("modal-title").innerHTML = '예고편 재생: ' +code;
-          str = '<video oncontextmenu="return false;" id="trailer" width="800" controls autoplay preload="metadata">';
-          str += '<source src="' + data.data + '" type="video/mp4"></video>';
-          document.getElementById("trailer_player").innerHTML = str;
-        } else {
-          $.notify('<strong>'+data.data+'</strong>', { type: 'warning' });
-        }
-    },
-    error: function (error) {
-        $.notify('<strong>예고편 재생 실패. 로그를 확인하세요.</strong>', { type: 'warning' });
-    }
-  });
-});
-*/
+
 
 $("body").on('click', '#trailer_view_btn', function(e){
   e.preventDefault();
   var code = $(this).data('code');
   var url = $(this).data('url');
   
-  document.getElementById("modal-title").innerHTML = '예고편 재생: ' + code;
-  str = '<video oncontextmenu="return false;" id="trailer" width="800" controls autoplay muted preload="metadata">';
+  document.getElementById("video_modal_title").innerHTML = '예고편 재생: ' + code;
+  str = '<video oncontextmenu="return false;" id="video_modal_video" width="800" controls autoplay muted preload="metadata">';
   str += '<source src="' + url + '" type="video/mp4"></video>';
-  document.getElementById("trailer_player").innerHTML = str;
-  $("#trailer_modal").modal();
+  document.getElementById("video_player_body").innerHTML = str;
+  $("#video_modal").modal();
 });
 
-$("#trailer_modal").on('hidden.bs.modal', function () {
-  document.getElementById("trailer").pause();
-});
 
-$("#trailer_modal").on('click', '#trailer_close_btn', function(e){
-  document.getElementById("trailer").pause();
-  e.preventDefault();
-});
 
 $("body").on('click', '#self_search_btn', function(e){
   e.preventDefault();
