--- a/templates/bot_downloader_av_receive_setting.html
+++ b/templates/bot_downloader_av_receive_setting.html
@@ -19,8 +19,8 @@
 
       {{ macros.m_tab_content_start('normal', true) }}
         {{ macros.setting_global_scheduler_sub_button(arg['scheduler'], arg['is_running']) }}
-        {{ macros.setting_input_text('interval', '스케쥴링 실행 정보', value=arg['interval'], col='3', desc=['Inverval(minute 단위)이나 Cron 설정']) }}
-        {{ macros.setting_checkbox('auto_start', '시작시 자동실행', value=arg['auto_start'], desc='On : 시작시 자동으로 사용 설정합니다.') }}
+        {{ macros.setting_input_text('receive_interval', '스케쥴링 실행 정보', value=arg['receive_interval'], col='3', desc=['Inverval(minute 단위)이나 Cron 설정']) }}
+        {{ macros.setting_checkbox('receive_auto_start', '시작시 자동실행', value=arg['receive_auto_start'], desc='On : 시작시 자동으로 사용 설정합니다.') }}
         {{ macros.setting_radio('telegram_invoke_action', '텔레그램 수신시', ['실행하지 않음', '스케쥴링 중에만 실행', '스케쥴링 상태가 아니더라도 실행'], value=arg['telegram_invoke_action']) }}
         {{ macros.setting_checkbox('show_poster', '웹 포스터 표시', value=arg['show_poster']) }}
         {{ macros.setting_checkbox('receive_send_notify', '정보 수신시 알림', value=arg['receive_send_notify'], desc=['ID : bot_downloader_av_receive']) }}
